versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/Uncorrelated.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module generalUncorrelated
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function UncorrelatedDefaultConst() &
      bind(C, name='UncorrelatedDefaultConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function UncorrelatedDefaultConst

!! Create, default
function UncorrelatedDefault() &
      bind(C, name='UncorrelatedDefault') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function UncorrelatedDefault

!! Create, general, const
function UncorrelatedCreateConst( &
   label, &
   productFrame, &
   angular, &
   energy, &
   labelSize, &
   productFrameSize &
) &
      bind(C, name='UncorrelatedCreateConst') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_size_t), intent(in), value :: labelSize
   character(c_char), intent(in) :: label(labelSize)
   integer(c_size_t), intent(in), value :: productFrameSize
   character(c_char), intent(in) :: productFrame(productFrameSize)
   type(c_ptr), value :: angular
   type(c_ptr), value :: energy
   type(c_ptr) :: handle
end function UncorrelatedCreateConst

!! Create, general
function UncorrelatedCreate( &
   label, &
   productFrame, &
   angular, &
   energy, &
   labelSize, &
   productFrameSize &
) &
      bind(C, name='UncorrelatedCreate') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_size_t), intent(in), value :: labelSize
   character(c_char), intent(in) :: label(labelSize)
   integer(c_size_t), intent(in), value :: productFrameSize
   character(c_char), intent(in) :: productFrame(productFrameSize)
   type(c_ptr), value :: angular
   type(c_ptr), value :: energy
   type(c_ptr) :: handle
end function UncorrelatedCreate

!! Assign
subroutine UncorrelatedAssign(handleLHS, handleRHS) &
      bind(C, name='UncorrelatedAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS, handleRHS
end subroutine UncorrelatedAssign

!! Delete
subroutine UncorrelatedDelete(handle) &
      bind(C, name='UncorrelatedDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine UncorrelatedDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function UncorrelatedRead(handle, filename, filenameSize) &
      bind(C, name='UncorrelatedRead') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function UncorrelatedRead

!! Write to file
function UncorrelatedWrite(handle, filename, filenameSize) &
      bind(C, name='UncorrelatedWrite') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function UncorrelatedWrite

!! Print to standard output, in our prettyprinting format
function UncorrelatedPrint(handle) &
      bind(C, name='UncorrelatedPrint') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function UncorrelatedPrint

!! Print to standard output, as XML
function UncorrelatedPrintXML(handle) &
      bind(C, name='UncorrelatedPrintXML') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function UncorrelatedPrintXML

!! Print to standard output, as JSON
function UncorrelatedPrintJSON(handle) &
      bind(C, name='UncorrelatedPrintJSON') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function UncorrelatedPrintJSON


!! -----------------------------------------------------------------------------
!! Metadatum: label
!! -----------------------------------------------------------------------------

!! Has
function UncorrelatedLabelHas(handle) &
      bind(C, name='UncorrelatedLabelHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function UncorrelatedLabelHas

!! Get
function UncorrelatedLabelGet(handle) &
      bind(C, name='UncorrelatedLabelGet') &
      result(label)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: label
end function UncorrelatedLabelGet

!! Set
subroutine UncorrelatedLabelSet(handle, label, labelSize) &
      bind(C, name='UncorrelatedLabelSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: labelSize
   character(c_char), intent(in) :: label(labelSize)
end subroutine UncorrelatedLabelSet


!! -----------------------------------------------------------------------------
!! Metadatum: productFrame
!! -----------------------------------------------------------------------------

!! Has
function UncorrelatedProductFrameHas(handle) &
      bind(C, name='UncorrelatedProductFrameHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function UncorrelatedProductFrameHas

!! Get
function UncorrelatedProductFrameGet(handle) &
      bind(C, name='UncorrelatedProductFrameGet') &
      result(productFrame)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: productFrame
end function UncorrelatedProductFrameGet

!! Set
subroutine UncorrelatedProductFrameSet(handle, productFrame, productFrameSize) &
      bind(C, name='UncorrelatedProductFrameSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: productFrameSize
   character(c_char), intent(in) :: productFrame(productFrameSize)
end subroutine UncorrelatedProductFrameSet


!! -----------------------------------------------------------------------------
!! Child: angular
!! -----------------------------------------------------------------------------

!! Has
function UncorrelatedAngularHas(handle) &
      bind(C, name='UncorrelatedAngularHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function UncorrelatedAngularHas

!! Get, const
function UncorrelatedAngularGetConst(handle) &
      bind(C, name='UncorrelatedAngularGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function UncorrelatedAngularGetConst

!! Get
function UncorrelatedAngularGet(handle) &
      bind(C, name='UncorrelatedAngularGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function UncorrelatedAngularGet

!! Set
subroutine UncorrelatedAngularSet(handle, fieldHandle) &
      bind(C, name='UncorrelatedAngularSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine UncorrelatedAngularSet


!! -----------------------------------------------------------------------------
!! Child: energy
!! -----------------------------------------------------------------------------

!! Has
function UncorrelatedEnergyHas(handle) &
      bind(C, name='UncorrelatedEnergyHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function UncorrelatedEnergyHas

!! Get, const
function UncorrelatedEnergyGetConst(handle) &
      bind(C, name='UncorrelatedEnergyGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function UncorrelatedEnergyGetConst

!! Get
function UncorrelatedEnergyGet(handle) &
      bind(C, name='UncorrelatedEnergyGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function UncorrelatedEnergyGet

!! Set
subroutine UncorrelatedEnergySet(handle, fieldHandle) &
      bind(C, name='UncorrelatedEnergySet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine UncorrelatedEnergySet


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalUncorrelated
